Cluster/flux-system/infrastructure/network_policy/restrict-namespace-communication.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: colors-api
spec:
  podSelector:
    matchLabels: {}
